tests/unit/default/syntax-error/048-create-table-parens-name-colon-type-params-null-eq-str-broken.e.t
---- IN ----
+%table(id:decimal(10,2)?='string
---- OUT ----
---- ERR ----
syntax: expected <'> after `...cimal(10,2)?='string` instead of EOL at position 33 - at line 1
---- EXIT ----
1
